<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/d_24"
    android:paddingTop="@dimen/d_72"
    android:paddingEnd="@dimen/d_24"
    android:paddingBottom="@dimen/d_25"
    tools:context=".ui.fragments.CreateAccountFragment"
    android:background="@color/bgColor">

    <TextView
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/get_started_shape"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/s_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/gettingStarted"
        android:textAlignment="center"
        android:textColor="@color/onboardingTextColor"
        android:textSize="@dimen/s_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_14"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/lookLikeYouAreNewUser"
        android:textAlignment="center"
        android:textColor="@color/authTextColor"
        android:textSize="@dimen/s_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:lineHeight="@dimen/s_28" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_40"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/authTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_40"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/email"
        android:inputType="text"
        android:textColorHint="@color/authTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        android:background="@drawable/phone_number_et_shape">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countyCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="false"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/d_10"
            android:layout_marginStart="@dimen/d_10"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:background="@color/white"
            android:paddingVertical="@dimen/d_8"/>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>