<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/d_24"
    android:paddingTop="@dimen/d_72"
    android:paddingEnd="@dimen/d_24"
    android:paddingBottom="@dimen/d_25"
    tools:context=".ui.fragments.EmailVerificationFragment"
    android:background="@color/bgColor">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/get_started_shape"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/s_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/whatsYourEmail"
        android:textAlignment="center"
        android:textColor="@color/onboardingTextColor"
        android:textSize="@dimen/s_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_14"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/weNeedToSearch"
        android:textAlignment="center"
        android:textColor="@color/authTextColor"
        android:textSize="@dimen/s_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:lineHeight="@dimen/s_28" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_40"
        android:background="@drawable/edit_text_shape"
        android:hint="@string/email"
        android:inputType="text"
        android:textColorHint="@color/authTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />
</androidx.constraintlayout.widget.ConstraintLayout>